--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 <button id="random"><span>Random</span></button>
 </div>
     
-<script src="code.js"></script>
+<script src="game.js"></script>
     
 </body>
