--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset = "UTF-8" />
     <title>The Game of Life</title>
-    <link rel="stylesheet" href="life.css">    
+    <link rel="stylesheet" href="style.css">    
 </head>
 <body>
 
