--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <link rel="stylesheet" href="/style.css"></link>
     <body>
         <div id="main-content">
             <a href="">Submit Suggestions Here</a>
