--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <link rel="stylesheet" href="/style.css"></link>
     <body>
         <div id="main-content">
-            <div><a href="">Submit Suggestions Here</a></div>
-            <div><a href="">Submit Orders Here</a></div>
+            <div><a href=""><h1>Submit Suggestions Here</h1></a></div>
+            <div><a href=""><h1>Submit Orders Here</h1></a></div>
         </div>
     </body>
 </html>
