--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
     <link rel="stylesheet" href="/style.css"></link>
     <body>
         <div id="main-content">
-            <div><a href=""><h1>Submit Suggestions Here</h1></a></div>
-            <div><a href=""><h1>Submit Orders Here</h1></a></div>
+            <div><a href="https://docs.google.com/forms/d/1LbCigiPUlK6iCAhGJjBQqRKDzzvkL5pN4X792POMw10"><h1>Submit Orders Here</h1></a></div>
         </div>
     </body>
 </html>
