--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
     <link rel="stylesheet" href="/style.css"></link>
     <body>
         <div id="main-content">
-            <div><a href="https://docs.google.com/forms/d/1LbCigiPUlK6iCAhGJjBQqRKDzzvkL5pN4X792POMw10"><h1>Submit Orders Here</h1></a></div>
+            <div><a href="https://docs.google.com/forms/d/1LbCigiPUlK6iCAhGJjBQqRKDzzvkL5pN4X792POMw10"><h6>Submit Orders Here</h6></a></div>
+            <div id="infoarea">
+                <div><p>I'm David and I recently started a business baking homemade cookies. It was far from an easy process, but I was determined to make it a success. With my attention to detail and passion for baking, I ensure that each batch is made with to high standards that I set. My dedication and hard work has paid off, and my business is becoming increasingly successful. I'm excited for the future and look forward to creating even more delicious treats for everyone in Ladera Ranch.
+                    </p></div>
+            </div>
         </div>
     </body>
 </html>
