--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css"></link>
     <body>
+        <div id="header"><img src="banner.jpg" style="width: 100%; height: 1cm;"></div>
         <div id="main-content">
             <div><a href="https://docs.google.com/forms/d/1LbCigiPUlK6iCAhGJjBQqRKDzzvkL5pN4X792POMw10"><h6>Submit Orders Here</h6></a></div>
             <div id="infoarea">
