--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="/style.css"></link>
     <body>
+        <div id="navbar"><a href="https://docs.google.com/forms/d/1LbCigiPUlK6iCAhGJjBQqRKDzzvkL5pN4X792POMw10"><h6>Submit Orders Here</h6></a></div>
         <div id="main-content">
-            <div><a href="https://docs.google.com/forms/d/1LbCigiPUlK6iCAhGJjBQqRKDzzvkL5pN4X792POMw10"><h6>Submit Orders Here</h6></a></div>
             <div id="infoarea">
+                
                 <!image of dane, david, ethan, goes here>
             </div>
             <div id="infoarea">
