--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <title>Ladera Cookie Co.</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="stylesheet" href="/style.css"></link>
+    <link rel="stylesheet" href="/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <body>
         <div id="navbar"><a href="https://docs.google.com/forms/d/1LbCigiPUlK6iCAhGJjBQqRKDzzvkL5pN4X792POMw10"><h6>Submit Orders Here</h6></a></div>
         <div id="main-content">
