--- a/index.html
+++ b/index.html
@@ -1,20 +1,92 @@
 <!DOCTYPE html>
 <html>
-    <title>Ladera Cookie Co.</title>
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="stylesheet" href="/style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <body>
-        <div id="navbar"><a href="https://docs.google.com/forms/d/1LbCigiPUlK6iCAhGJjBQqRKDzzvkL5pN4X792POMw10"><h6>Submit Orders Here</h6></a></div>
-        <div id="main-content">
-            <div id="infoarea">
-                
-                <!image of dane, david, ethan, goes here>
-            </div>
-            <div id="infoarea">
-                <div><p>I'm David and I recently started a business baking homemade cookies. It was far from an easy process, but I was determined to make it a success. With my attention to detail and passion for baking, I ensure that each batch is made with to high standards that I set. My dedication and hard work has paid off, and my business is becoming increasingly successful. I'm excited for the future and look forward to creating even more delicious treats for everyone in Ladera Ranch.
-                    </p></div>
+  <head>
+    <title>W3.CSS Template</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+    body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
+    .w3-row-padding img {margin-bottom: 12px}
+    /* Set the width of the sidebar to 120px */
+    .w3-sidebar {width: 120px;background: #222;}
+    /* Add a left margin to the "page content" that matches the width of the sidebar (120px) */
+    #main {margin-left: 120px}
+    /* Remove margins from "page content" on small screens */
+    @media only screen and (max-width: 600px) {#main {margin-left: 0}}
+    </style>
+  </head>
+<body class="w3-black">
+
+<!-- Icon Bar (Sidebar - hidden on small screens) -->
+<nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
+  <!-- Avatar image in top left corner -->
+  <img src="cookie.png" style="width:100%">
+  <a href="#" class="w3-bar-item w3-button w3-padding-large w3-black">
+    <i class="fa fa-home w3-xxlarge"></i>
+    <p>HOME</p>
+  </a>
+  <a href="#about" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+    <i class="fa fa-user w3-xxlarge"></i>
+    <p>ABOUT</p>
+  </a>
+  </a>
+</nav>
+
+<!-- Navbar on small screens (Hidden on medium and large screens) -->
+<div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
+  <div class="w3-bar w3-black w3-opacity w3-hover-opacity-off w3-center w3-small">
+    <a href="#" class="w3-bar-item w3-button" style="width:25% !important">HOME</a>
+    <a href="#about" class="w3-bar-item w3-button" style="width:25% !important">ABOUT</a>
+  </div>
+</div>
+
+<!-- Page Content -->
+<div class="w3-padding-large" id="main">
+  <!-- Header/Home -->
+  <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
+    <h1 class="w3-jumbo"><span class="w3-hide-small">This is</span> Ladera Cookie Co.</h1>
+    <p><h2><a href="https://docs.google.com/forms/d/1LbCigiPUlK6iCAhGJjBQqRKDzzvkL5pN4X792POMw10"></h2><h6>Submit Orders Here</h6></a></p>
+    <img src="cookie.png" alt="cookie" class="w3-image" width="auto" height="1108">
+  </header>
+
+
+  
+  <!-- Portfolio Section -->
+  <div class="w3-padding-64 w3-content" id="photos">
+    <h2 class="w3-text-light-grey">Extras</h2>
+    <hr style="width:200px" class="w3-opacity">
+
+    <!-- Grid for photos -->
+    <div class="w3-row-padding" style="margin:0 -16px">
+      <div class="w3-half">
+        <img src="" style="width:100%">
+        <img src="" style="width:100%">
+        <img src="" style="width:100%">
+      </div>
+
+      <div class="w3-half">
+        <img src="" style="width:100%">
+        <img src="" style="width:100%">
+        <img src="" style="width:100%">
+        <img src="" style="width:100%">
+      </div>
+    <!-- End photo grid -->
+    </div>
+    <div id="about">
+      I'm the founder, David, and I recently started a business baking homemade cookies. It was far from an easy process, but I was determined to make it a success. With my attention to detail and passion for baking, I ensure that each batch is made with to high standards that I set. My dedication and hard work has paid off, and my business is becoming increasingly successful. I'm excited for the future and look forward to creating even more delicious treats for everyone in Ladera Ranch.
             </div>
         </div>
     </body>
+</html>
+
+    </div>
+  </div>
+
+<!-- END PAGE CONTENT -->
+</div>
+
+</body>
 </html>
