--- a/index.html
+++ b/index.html
@@ -62,8 +62,10 @@
     <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
-        <img src="" style="width:100%">
-        <img src="" style="width:100%">
+        <div id="about">
+          <img src="images/me.jpeg" style="width:50%; float:left; padding-right:10px;"><p>I'm the founder, David, and I recently started a business baking homemade cookies. It was far from an easy process, but I was determined to make it a success. With my attention to detail and passion for baking, I ensure that each batch is made with to high standards that I set. My dedication and hard work has paid off, and my business is becoming increasingly successful. I'm excited for the future and look forward to creating even more delicious treats for everyone in Ladera Ranch.</p>
+        </div>
+        <img src="images/ethan.jpeg" style="width:50%; float:left; padding-right:10px;">
         <img src="" style="width:100%">
       </div>
 
@@ -75,9 +77,7 @@
       </div>
     <!-- End photo grid -->
     </div>
-    <div id="about">
-      I'm the founder, David, and I recently started a business baking homemade cookies. It was far from an easy process, but I was determined to make it a success. With my attention to detail and passion for baking, I ensure that each batch is made with to high standards that I set. My dedication and hard work has paid off, and my business is becoming increasingly successful. I'm excited for the future and look forward to creating even more delicious treats for everyone in Ladera Ranch.
-            </div>
+    
         </div>
     </body>
 </html>
