--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
         <div id="about">
-          <div><img src="images/me.jpeg" id="aboutimage" style="width:50%; float:left; padding-right:10px;"><p id="aboutp">I'm the founder and president, David, and I recently started a business baking homemade cookies. It was far from an easy process, but I was determined to make it a success. With my attention to detail and passion for baking, I ensure that each batch is made with to high standards that I set. My dedication and hard work has paid off, and my business is becoming increasingly successful. I'm excited for the future and look forward to creating even more delicious treats for everyone in Ladera Ranch.</p></div>
+          <div><img src="images/me.jpeg" id="aboutimage" style="width:50%; float:left; padding-right:10px;">I'm the founder and president, David, and I recently started a business baking homemade cookies. It was far from an easy process, but I was determined to make it a success. With my attention to detail and passion for baking, I ensure that each batch is made with to high standards that I set. My dedication and hard work has paid off, and my business is becoming increasingly successful. I'm excited for the future and look forward to creating even more delicious treats for everyone in Ladera Ranch.</div>
         </div>
-        <div><img src="images/ethan.jpeg" id="aboutimage" style="width:50%; float:left; padding-right:10px;"><p id="aboutp">I'm the vice president, Ethan, and I recently started helping my friend with his business baking homemade cookies. I helped create new recipes to sell, and I am interested in growing the company. Me, along with David and Dane, will bake cookies for all of Ladera to enjoy.</p></div>
+        <div><img src="images/ethan.jpeg" id="aboutimage" style="width:50%; float:left; padding-right:10px;">I'm the vice president, Ethan, and I recently started helping my friend with his business baking homemade cookies. I helped create new recipes to sell, and I am interested in growing the company. Me, along with David and Dane, will bake cookies for all of Ladera to enjoy.</div>
       </div>
 
       <div class="w3-half">
