--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="keywords" content="ladera cookie co, Ladera Cookie Co, cookies, Cookies, Ladera, ladera, Crumbl, crumbl, treats, Treats, delivery">
     <title>Ladera Cookie Co.</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
