--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  {% seo %}
   <head>
     <meta name="description" content="Cookie Delivery for Ladera Ranch">
     <meta name="author" content="David Mousseau">
