--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link type="image/x-icon" href="cookie.png">
+    <link rel="icon" type="image/x-icon" href="cookie.png">
     <meta name="description" content="Cookie Delivery for Ladera Ranch">
     <meta name="author" content="David Mousseau">
     <meta name="keywords" content="ladera cookie co, Ladera Cookie Co, cookies, Cookies, Ladera, ladera, Crumbl, crumbl, treats, Treats, delivery">
