--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
         <div id="about">
           <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
             <img class="image" src="images/me.jpeg" draggable="false" />
-            <p style="position:left; padding-bottom: 20px;">I'm the founder and president, David, and I recently started a business baking homemade cookies. It was far from an easy process, but I was determined to make it a success. With my attention to detail and passion for baking, I ensure that each batch is made with to high standards that I set. My dedication and hard work has paid off, and my business is becoming increasingly successful. I'm excited for the future and look forward to creating even more delicious treats for everyone in Ladera Ranch.</p>
+            <p style=" width: 50vmin; position:left; padding-bottom: 20px;">I'm the founder and president, David, and I recently started a business baking homemade cookies. It was far from an easy process, but I was determined to make it a success. With my attention to detail and passion for baking, I ensure that each batch is made with to high standards that I set. My dedication and hard work has paid off, and my business is becoming increasingly successful. I'm excited for the future and look forward to creating even more delicious treats for everyone in Ladera Ranch.</p>
             <img class="image" src="images/ethan.jpeg" draggable="false" />
-            <p style="position:left; padding-bottom: 20px;">I'm the vice president, Ethan, and I recently started helping my friend with his business baking homemade cookies. I helped create new recipes to sell, and I am interested in growing the company. Me, along with David and Dane, will bake cookies for all of Ladera to enjoy.</p>
+            <p style="width: 50vmin; position:left; padding-bottom: 20px;">I'm the vice president, Ethan, and I recently started helping my friend with his business baking homemade cookies. I helped create new recipes to sell, and I am interested in growing the company. Me, along with David and Dane, will bake cookies for all of Ladera to enjoy.</p>
             <img class="image" src="images/dane.jpeg" draggable="false" />
-            <p style="position:left; padding-bottom: 20px;">I'm Dane, the delivery coordinator, and I make sure that anyone who orders gets their cookies fresh and on time. With my help, we also create new flavors to add to our ever-expanding catalog of cookies. Me, along with David and Ethan, will create some of the best cookies for everyone in Ladera.</p>
+            <p style="width: 50vmin; position:left; padding-bottom: 20px;">I'm Dane, the delivery coordinator, and I make sure that anyone who orders gets their cookies fresh and on time. With my help, we also create new flavors to add to our ever-expanding catalog of cookies. Me, along with David and Ethan, will create some of the best cookies for everyone in Ladera.</p>
           </div>
         </div>
       </div>
@@ -80,7 +80,7 @@
   display: inline-flex;
   gap: 4vmin;
   left: 50%;
-  padding-top: 11in;
+  padding-top: 5in;
   top: 50%;
   transform: translate(0%, -50%); 
   user-select: none; /* -- Prevent image highlighting -- */
