--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="line">
     <a 
        id="channel-link" 
-       href="DOC HERE" 
+       href="https://docs.google.com/forms/d/1LbCigiPUlK6iCAhGJjBQqRKDzzvkL5pN4X792POMw10" 
        target="_blank" 
        class="word fancy"
     >
