--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
   </header>
   <div id="text">
     <div class="line">
-    <a 
+      <a 
        id="channel-link" 
        href="https://docs.google.com/forms/d/1LbCigiPUlK6iCAhGJjBQqRKDzzvkL5pN4X792POMw10" 
        target="_blank" 
        class="word fancy"
-    >
-      <span>Order </span> 
-      <span>Here</span>
-    </a>
+      >
+        Order Here
+      </a>
+    </div>
   </div>
   <style>
     @keyframes float {
@@ -95,7 +95,7 @@
 
 .word {
   color: white;
-  font-size: clamp(2rem, 8vw, 10rem);
+  font-size: 30px;
   font-family: "Rubik", sans-serif;
   margin: 0rem;
   transition: opacity 250ms ease;
