--- a/index.html
+++ b/index.html
@@ -58,8 +58,6 @@
       <a 
        id="dlink" 
        href="https://docs.google.com/forms/d/1LbCigiPUlK6iCAhGJjBQqRKDzzvkL5pN4X792POMw10" 
-       target="_blank" 
-       class="word fancy"
       >
         Order Here
       </a>
@@ -71,8 +69,8 @@
       display: block;
       background-color: #222;
       color: white;
-      margin-left: 2in;
-      margin-right: 2in;
+      margin-left: 2vw;
+      margin-right: -2vw;
       border-radius: 0.5cm;
       border-style: solid;
       border-color: grey;
