--- a/index.html
+++ b/index.html
@@ -55,12 +55,7 @@
   </header>
   <div id="text">
     <div style="text-align: center; font-size: x-large;">
-      <a 
-       id="dlink" 
-       href="https://docs.google.com/forms/d/1LbCigiPUlK6iCAhGJjBQqRKDzzvkL5pN4X792POMw10" 
-      >
-        Order Here
-      </a>
+      <a id="dlink" href="https://docs.google.com/forms/d/1LbCigiPUlK6iCAhGJjBQqRKDzzvkL5pN4X792POMw10">Order Here</a>
     </div>
   </div>
   <style>
