--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
   <style>
     #dlink:link, #dlink:visited {
       text-decoration: none;
-      display: block;
+      display: inline-block;
       background-color: #222;
       color: white;
-      margin-left: 2vw;
-      margin-right: -2vw;
+      margin-left: 3vw;
+      margin-right: -3vw;
       border-radius: 0.5cm;
       border-style: solid;
       border-color: grey;
