--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
     <i class="fa fa-user w3-xxlarge"></i>
     <p>ABOUT</p>
   </a>
+  <a href="https://docs.google.com/forms/d/1LbCigiPUlK6iCAhGJjBQqRKDzzvkL5pN4X792POMw10" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+    <i class="fa fa-user w3-xxlarge"></i>
+    <p>ORDER</p>
   </a>
 </nav>
 
@@ -44,6 +47,7 @@
   <div class="w3-bar w3-black w3-opacity w3-hover-opacity-off w3-center w3-small">
     <a href="#" class="w3-bar-item w3-button" style="width:25% !important">Home</a>
     <a href="#about" class="w3-bar-item w3-button" style="width:25% !important">About</a>
+    <a href="https://docs.google.com/forms/d/1LbCigiPUlK6iCAhGJjBQqRKDzzvkL5pN4X792POMw10" class="w3-bar-item w3-button" style="width:25% !important">Order</a>
   </div>
 </div>
 
@@ -55,22 +59,8 @@
   </header>
   <div id="text">
     <div style="text-align: center; font-size: x-large;">
-      <a id="dlink" href="https://docs.google.com/forms/d/1LbCigiPUlK6iCAhGJjBQqRKDzzvkL5pN4X792POMw10">Order Here</a>
     </div>
   </div>
-  <style>
-    #dlink:link, #dlink:visited {
-      text-decoration: none;
-      display: inline-block;
-      background-color: #222;
-      color: white;
-      margin-left: 3vw;
-      margin-right: -3vw;
-      border-radius: 0.5cm;
-      border-style: solid;
-      border-color: grey;
-    }
-  </style>
   
   <!-- Portfolio Section -->
   <div class="w3-padding-64 w3-content" id="photos">
@@ -165,15 +155,13 @@ window.ontouchmove = e => handleOnMove(e.touches[0]);
     <!-- End photo grid -->
     </div>
     
-        </div>
-    </body>
-</html>
+ 
 
     </div>
   </div>
 
 <!-- END PAGE CONTENT -->
 </div>
-
 </body>
 </html>
+
