--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <!-- Page Content -->
 <div class="w3-padding-large" id="main">
   <!-- Header/Home -->
-  <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
+  <header style="text-align:center;" class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small">This is</span> Ladera Cookie Co.</h1>
   </header>
   <div id="text">
@@ -71,7 +71,7 @@
         <div id="about">
           <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
             <img class="image" src="images/me.jpeg" draggable="false" />
-            <p style=" width: 50vmin; position:left; padding-bottom: 20px;">I'm the founder and president, David, and I recently started a business baking homemade cookies. It was far from an easy process, but I was determined to make it a success. With my attention to detail and passion for baking, I ensure that each batch is made with to high standards that I set. My dedication and hard work has paid off, and my business is becoming increasingly successful. I'm excited for the future and look forward to creating even more delicious treats for everyone in Ladera Ranch.</p>
+            <p style=" width: 50vmin; position:left; padding-bottom: 20px;">I'm the founder and president, David, and I recently started a business baking homemade cookies. It was far from an easy process, but I was determined to make it a success. With my attention to detail and passion for baking, I ensure that each batch is made to high standards that I set. My dedication and hard work has paid off, and my business is becoming increasingly successful. I'm excited for the future and look forward to creating even more delicious treats for everyone in Ladera Ranch.</p>
             <img class="image" src="images/ethan.jpeg" draggable="false" />
             <p style="width: 50vmin; position:left; padding-bottom: 20px;">I'm the vice president, Ethan, and I recently started helping my friend with his business baking homemade cookies. I helped create new recipes to sell, and I am interested in growing the company. Me, along with David and Dane, will bake cookies for all of Ladera to enjoy.</p>
             <img class="image" src="images/dane.jpeg" draggable="false" />
