--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <!-- Page Content -->
 <div class="w3-padding-large" id="main">
   <!-- Header/Home -->
-  <header style="text-align:center;" class="w3-container w3-padding-32 w3-center w3-black" id="home">
+  <header style="position: 100vw;" class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small">This is</span> Ladera Cookie Co.</h1>
   </header>
   <div id="text">
