--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
     /* Remove margins from "page content" on small screens */
     @media only screen and (max-width: 600px) {#main {margin-left: 0}}
     </style>
+      <style>
+    html, body {
+      overflow-x: hidden;
+    }
+    body {
+      position: relative
+    }
+    </style>
   </head>
 <body class="w3-black">
 
