--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <p>ABOUT</p>
   </a>
   <a href="https://docs.google.com/forms/d/1LbCigiPUlK6iCAhGJjBQqRKDzzvkL5pN4X792POMw10" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-    <i class="fa fa-user w3-xxlarge"></i>
+    <i class="fa fa-envelope w3-xxlarge"></i>
     <p>ORDER</p>
   </a>
 </nav>
