--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
     <h1 class="w3-jumbo"><span class="w3-hide-small">This is</span> Ladera Cookie Co.</h1>
   </header>
   <div id="text">
-    <div style="text-align: center; font-size: x-large;">
+    <div style="text-align: center; font-size: x-large;"><span>
+      <a href="PAYPAL HERE"></a><img src="images/paypalmarket.png" width="20px" height="auto"></a>
+    </span>
     </div>
   </div>
   
