--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   </header>
   <div id="text">
     <div style="text-align: center; font-size: x-large;"><span>
-      <a href="PAYPAL HERE"></a><img src="images/paypalmarket.png" width="20px" height="auto"></a>
+      <a href="https://www.paypal.com/paypalme/laderacookieco"><img src="images/paypalmarket.png" width="20px" height="auto"></a>
     </span>
     </div>
   </div>
