--- a/index.html
+++ b/index.html
@@ -159,7 +159,13 @@ window.ontouchmove = e => handleOnMove(e.touches[0]);
       
     <!-- End photo grid -->
     </div>
-   <a href="https://www.paypal.com/paypalme/laderacookieco"><img src="images/paypalmarket.png" width="20px" height="auto"></a>
+    <style>
+      pay {
+        justify-content: center;
+        display: flex
+      }
+    </style>
+    <div id="pay"><a href="https://www.paypal.com/paypalme/laderacookieco"><img src="images/paypalmarket.png" width="20px" height="auto"></a></div>
  
 
     </div>
