--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ window.ontouchmove = e => handleOnMove(e.touches[0]);
     </div>
     <style>
       pay {
-        justify-content: center;
+        margin: auto;
         display: flex
       }
     </style>
