--- a/index.html
+++ b/index.html
@@ -161,11 +161,11 @@ window.ontouchmove = e => handleOnMove(e.touches[0]);
     </div>
     <style>
       pay {
-        margin: auto;
+        justify-content: center;
         display: flex
       }
     </style>
-    <div id="pay"><a href="https://www.paypal.com/paypalme/laderacookieco"><img src="images/paypalmarket.png" width="20px" height="auto"></a></div>
+    <a id="pay" href="https://www.paypal.com/paypalme/laderacookieco"><img src="images/paypalmarket.png" width="20px" height="auto"></a>
  
 
     </div>
