--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ window.ontouchmove = e => handleOnMove(e.touches[0]);
         display: flex
       }
     </style>
-    <a id="pay" href="https://www.paypal.com/paypalme/laderacookieco"><img src="images/paypalmarket.png" width="20px" height="auto"></a>
+    <a href="https://www.paypal.com/paypalme/laderacookieco"><img id="pay" src="images/paypalmarket.png" width="20px" height="auto"></a>
  
 
     </div>
