--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@ window.ontouchmove = e => handleOnMove(e.touches[0]);
         justify-content: center;
       }
     </style>
+    <hr style="color: grey;">
     <a href="https://www.paypal.com/paypalme/laderacookieco"><img id="pay" src="images/paypalmarket.png" width="20px" height="auto"></a>
  
 
