--- a/index.html
+++ b/index.html
@@ -164,8 +164,9 @@ window.ontouchmove = e => handleOnMove(e.touches[0]);
         justify-content: center;
       }
     </style>
+    <h6>Extra links</h6>
     <hr style="color: grey;">
-    <a href="https://www.paypal.com/paypalme/laderacookieco"><img id="pay" src="images/paypalmarket.png" width="20px" height="auto"></a>
+    <a href="https://www.paypal.com/paypalme/laderacookieco"><img id="pay" src="images/paypalmarket.png" width="20px" height="auto"><p style="padding-left: 10px;">Paypal</p></a>
  
 
     </div>
