--- a/index.html
+++ b/index.html
@@ -160,13 +160,13 @@ window.ontouchmove = e => handleOnMove(e.touches[0]);
     <!-- End photo grid -->
     </div>
     <style>
-      pay {
-        justify-content: center;
+      #pay {
+        text-decoration: none;
       }
     </style>
     <h6>Extra links</h6>
     <hr style="color: grey;">
-    <a href="https://www.paypal.com/paypalme/laderacookieco"><img id="pay" src="images/paypalmarket.png" width="20px" height="auto"><p style="padding-left: 10px;">Paypal</p></a>
+    <a id="pay" href="https://www.paypal.com/paypalme/laderacookieco"><img src="images/paypalmarket.png" width="20px" height="auto"><span style="padding-left: 10px;">Paypal</span></a>
  
 
     </div>
