--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@ window.ontouchmove = e => handleOnMove(e.touches[0]);
     <style>
       #pay {
         text-decoration: none;
+        display: inline;
       }
     </style>
     <h6>Extra links</h6>
